RTCEth/Import Declarations/Visual Basic .NET/RTC4ethImport.vb

    Declare Sub      n_set_matrix Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal m11 As Double, ByVal m12 As Double, ByVal m21 As Double, ByVal m22 As Double)
    Declare Sub      set_matrix Lib "RTC4ethDLL.DLL" (ByVal m11 As Double, ByVal m12 As Double, ByVal m21 As Double, ByVal m22 As Double)
    Declare Sub      n_set_offset Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal xoffset As Short, ByVal yoffset As Short)
    Declare Sub      set_offset Lib "RTC4ethDLL.DLL" (ByVal xoffset As Short, ByVal yoffset As Short)
    Declare Sub      n_goto_xyz Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      goto_xyz Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      n_goto_xy Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short)
    Declare Sub      goto_xy Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short)
    Declare Function n_get_hex_version Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_hex_version Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_disable_laser Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      disable_laser Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_enable_laser Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      enable_laser Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_stop_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      stop_list Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_restart_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      restart_list Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_get_xyz_pos Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef x As Short, ByRef y As Short, ByRef z As Short)
    Declare Sub      get_xyz_pos Lib "RTC4ethDLL.DLL" (ByRef x As Short, ByRef y As Short, ByRef z As Short)
    Declare Sub      n_get_xy_pos Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef x As Short, ByRef y As Short)
    Declare Sub      get_xy_pos Lib "RTC4ethDLL.DLL" (ByRef x As Short, ByRef y As Short)
    Declare Sub      n_select_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal list_2 As UShort)
    Declare Sub      select_list Lib "RTC4ethDLL.DLL" (ByVal list_2 As UShort)
    Declare Sub      n_z_out Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal z As Short)
    Declare Sub      z_out Lib "RTC4ethDLL.DLL" (ByVal z As Short)
    Declare Sub      n_set_firstpulse_killer Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal fpk As UShort)
    Declare Sub      set_firstpulse_killer Lib "RTC4ethDLL.DLL" (ByVal fpk As UShort)
    Declare Sub      n_set_standby Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal half_period As UShort, ByVal pulse As UShort)
    Declare Sub      set_standby Lib "RTC4ethDLL.DLL" (ByVal half_period As UShort, ByVal pulse As UShort)
    Declare Sub      n_laser_signal_on Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      laser_signal_on Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_laser_signal_off Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      laser_signal_off Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_delay_mode Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal varpoly As UShort, ByVal directmove3d As UShort, ByVal edgelevel As UShort, ByVal minjumpdelay As UShort, ByVal jumplengthlimit As UShort)
    Declare Sub      set_delay_mode Lib "RTC4ethDLL.DLL" (ByVal varpoly As UShort, ByVal directmove3d As UShort, ByVal edgelevel As UShort, ByVal minjumpdelay As UShort, ByVal jumplengthlimit As UShort)
    Declare Sub      n_set_piso_control Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal l1 As UShort, ByVal l2 As UShort)
    Declare Sub      set_piso_control Lib "RTC4ethDLL.DLL" (ByVal l1 As UShort, ByVal l2 As UShort)
    Declare Sub      n_select_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort)
    Declare Sub      select_status Lib "RTC4ethDLL.DLL" (ByVal mode As UShort)
    Declare Sub      n_get_encoder Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef zx As Short, ByRef zy As Short)
    Declare Sub      get_encoder Lib "RTC4ethDLL.DLL" (ByRef zx As Short, ByRef zy As Short)
    Declare Sub      n_select_cor_table Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal heada As UShort, ByVal headb As UShort)
    Declare Sub      select_cor_table Lib "RTC4ethDLL.DLL" (ByVal heada As UShort, ByVal headb As UShort)
    Declare Sub      n_execute_at_pointer Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal position As UShort)
    Declare Sub      execute_at_pointer Lib "RTC4ethDLL.DLL" (ByVal position As UShort)
    Declare Function n_get_head_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal head As UShort) As UShort
    Declare Function get_head_status Lib "RTC4ethDLL.DLL" (ByVal head As UShort) As UShort
    Declare Sub      n_simulate_encoder Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal channel As UShort)
    Declare Sub      simulate_encoder Lib "RTC4ethDLL.DLL" (ByVal channel As UShort)
    Declare Sub      n_release_wait Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      release_wait Lib "RTC4ethDLL.DLL" ()
    Declare Function n_get_wait_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_wait_status Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_set_laser_mode Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort)
    Declare Sub      set_laser_mode Lib "RTC4ethDLL.DLL" (ByVal mode As UShort)
    Declare Sub      n_set_ext_start_delay Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal delay As Short, ByVal encoder As Short)
    Declare Sub      set_ext_start_delay Lib "RTC4ethDLL.DLL" (ByVal delay As Short, ByVal encoder As Short)
    Declare Sub      n_home_position Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal xhome As Short, ByVal yhome As Short)
    Declare Sub      home_position Lib "RTC4ethDLL.DLL" (ByVal xhome As Short, ByVal yhome As Short)
    Declare Sub      n_set_rot_center Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal center_x As Integer, ByVal center_y As Integer)
    Declare Sub      set_rot_center Lib "RTC4ethDLL.DLL" (ByVal center_x As Integer, ByVal center_y As Integer)
    Declare Sub      n_dsp_start Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      dsp_start Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_write_da_x Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As UShort, ByVal value As UShort)
    Declare Sub      write_da_x Lib "RTC4ethDLL.DLL" (ByVal x As UShort, ByVal value As UShort)
    Declare Function n_read_ad_x Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As UShort) As UShort
    Declare Function read_ad_x Lib "RTC4ethDLL.DLL" (ByVal x As UShort) As UShort
    Declare Function n_read_pixel_ad Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal pos As UShort) As UShort
    Declare Function read_pixel_ad Lib "RTC4ethDLL.DLL" (ByVal pos As UShort) As UShort
    Declare Function n_get_z_distance Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal z As Short) As Short
    Declare Function get_z_distance Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal z As Short) As Short
    Declare Function n_get_io_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_io_status Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function load_cor Lib "RTC4ethDLL.DLL" (ByVal filename As String) As Short
    Declare Function load_pro Lib "RTC4ethDLL.DLL" (ByVal filename As String) As Short
    Declare Function n_get_serial_number Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_serial_number Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function n_get_serial_number_32 Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As Integer
    Declare Function get_serial_number_32 Lib "RTC4ethDLL.DLL" () As Integer
    Declare Function n_get_rtc_version Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_rtc_version Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function n_auto_cal Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal head As UShort, ByVal command As UShort) As Short
    Declare Function auto_cal Lib "RTC4ethDLL.DLL" (ByVal head As UShort, ByVal command As UShort) As Short
    Declare Sub      n_set_hi Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal galvogainx As Double, ByVal galvogainy As Double, ByVal galvooffsetx As Short, ByVal galvooffsety As Short, ByVal head As Short)
    Declare Sub      set_hi Lib "RTC4ethDLL.DLL" (ByVal galvogainx As Double, ByVal galvogainy As Double, ByVal galvooffsetx As Short, ByVal galvooffsety As Short, ByVal head As Short)
    Declare Sub      n_set_list_mode Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort)
    Declare Sub      set_list_mode Lib "RTC4ethDLL.DLL" (ByVal mode As UShort)
    Declare Function n_get_list_space Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_list_space Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_save_and_restart_timer Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      save_and_restart_timer Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_ext_start_delay_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal delay As Short, ByVal encoder As Short)
    Declare Sub      set_ext_start_delay_list Lib "RTC4ethDLL.DLL" (ByVal delay As Short, ByVal encoder As Short)
    Declare Function n_get_time Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As Double
    Declare Function get_time Lib "RTC4ethDLL.DLL" () As Double
    Declare Sub      get_hi_data Lib "RTC4ethDLL.DLL" (ByRef x1 As UShort, ByRef x2 As UShort, ByRef y1 As UShort, ByRef y2 As UShort)
    Declare Function teachin Lib "RTC4ethDLL.DLL" (ByVal filename As String, ByVal xin As Short, ByVal yin As Short, ByVal zin As Short, ByVal ll0 As Double, ByRef xout As Short, ByRef yout As Short, ByRef zout As Short) As Short
    Declare Function getmemory Lib "RTC4ethDLL.DLL" (ByVal adr As UShort) As Short
    Declare Sub      set_timeout Lib "RTC4ethDLL.DLL" (ByVal timeout As UInteger)
    Declare Sub      set_timeouts Lib "RTC4ethDLL.DLL" (ByVal acquire_timeout_us As UInteger, ByVal acquire_max_retries As UInteger, ByVal send_recv_timeout_us As UInteger, ByVal send_recv_max_retries As UInteger, ByVal acqu_rel_min_intvl_ms As UInteger)
    Declare Sub      get_timeouts Lib "RTC4ethDLL.DLL" (ByRef acquire_timeout_us As UInteger, ByRef acquire_max_retries As UInteger, ByRef send_recv_timeout_us As UInteger, ByRef send_recv_max_retries As UInteger, ByRef acqu_rel_min_intvl_ms As UInteger)
    Declare Function rs232_config Lib "RTC4ethDLL.DLL" (ByVal baudrate As UInteger, ByVal parity As UInteger, ByVal stopbits As UInteger) As UInteger
    Declare Function n_rs232_config Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal baudrate As UInteger, ByVal parity As UInteger, ByVal stopbits As UInteger) As UInteger
    Declare Function rs232_write_data Lib "RTC4ethDLL.DLL" (ByVal data As UInteger) As UInteger
    Declare Function n_rs232_write_data Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal data As UInteger) As UInteger
    Declare Function rs232_write_text Lib "RTC4ethDLL.DLL" (ByVal text As String) As UInteger
    Declare Function n_rs232_write_text Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal text As String) As UInteger
    Declare Function rs232_read_data Lib "RTC4ethDLL.DLL" (ByRef data As UInteger) As UInteger
    Declare Function n_rs232_read_data Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef data As UInteger) As UInteger
    Declare Sub      n_eth_set_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort, ByVal initial_timeout_ms As Double, ByVal sum_timeout_ms As Double, ByVal multiplicator As Double, ByVal mode As Integer)
